--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,7 +11,7 @@
 
 
 
- 
+
 
 
 
@@ -29,7 +29,7 @@
 
   clip-path: circle(25px at calc(100% - 86.23rem) 45px);
   transition: all 0.3s ease-in-out;
-  
+
 }
 
 #active:checked~.wrapper {
@@ -69,6 +69,10 @@
   transform: translate(-50%, -50%);
   list-style: none;
   text-align: center;
+}
+
+.wrapper {
+  overflow: hidden;
 }
 
 .wrapper ul li {
@@ -111,9 +115,10 @@ input[type="checkbox"] {
 .nav ul {
   display: flex;
   list-style-type: none;
-  justify-content: end;
-  padding: 2.4rem;
-  padding-right: 1.09rem;
+  justify-content: center;
+  padding: 2rem 0;
+  padding-left: 0;
+  padding-right: 0 !important;
 
 
 }
@@ -135,7 +140,7 @@ input[type="checkbox"] {
   letter-spacing: 1.5px;
 }
 
-.nav ul li a::after { 
+.nav ul li a::after {
   position: absolute;
   content: "";
   top: 100%;
@@ -150,6 +155,8 @@ input[type="checkbox"] {
 
 .nav ul li a:hover {
   color: rgb(116, 214, 134);
+  cursor: pointer;
+
 }
 
 .nav ul li a:hover::after {
@@ -166,20 +173,25 @@ input[type="checkbox"] {
 /* medi query statrst here */
 
 @media (max-width: 768px) {
- 
+
   .nav {
     display: none !important;
   }
-  .wrapper{
+
+  .wrapper {
     height: 100vh !important;
     max-width: 100vw !important;
-  height: auto;
+    position: fixed !important;
+    min-height: 100%;
+    padding-bottom: 0 !important;
+    margin-bottom: 0 !important;
+
   }
 
 }
 
 @media (max-width: 480px) {
- 
+
   .nav {
     display: none !important;
   }
