--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  scroll-behavior: smooth;
-
+  scroll-behavior: smooth !important;
+overflow-x: hidden !important;
+/* overflow-y: hidden !important; */
+max-width: 100vw !important;
 }
 
 code {
